# n_watchmen_approximation

./: .gitignore  CMakeLists.txt  animate_guards.py  find_init_1.cpp  find_init_2.cpp  include.h  n_watchman_approximation.cpp  n_watchmen_approximation.cpp  reduce.cpp  reduce_1.cpp  solution.h  utils.h  visibility.cpp  visibility.h
input/: angled_house_ccw.txt  angled_reflex_ccw.txt  angled_wiggle_ccw.txt  comb_bays_ccw.txt  deep_notch_ccw.txt  input_divet.txt  l_shape_ccw.txt  nested_passage_ccw.txt  orthogonal_spiral_ccw.txt  pentagon_ccw.txt  rotated_spiral.txt  screenshot_example_comma_format.txt  sloped_notch_ccw.txt  spiral.txt  staircase_labyrinth_ccw.txt  u_shape_ccw.txt
input/packer_2008/: README.md
input/packer_2008/simple/: fig7_b_spike_box_simple_ccw.txt  fig7_c_irregular_bay_simple_ccw.txt  fig7_d_orthogonal_corridor_simple_ccw.txt  fig7_e_spike_skyline_simple_ccw.txt  fig7_f_random_nonconvex_simple_ccw.txt  fig7_g_wiggle_simple_ccw.txt  fig7_i_square_teeth_simple_ccw.txt  fig7_j_pinwheel_simple_ccw.txt  fig7_k_spiral_simple_ccw.txt  fig7_l_branching_simple_ccw.txt  fig7_p_spike_box_sparse_simple_ccw.txt
input/packer_2008/with_holes/: fig7_a_square_with_triangle_hole_rings.txt  fig7_h_square_with_slots_rings.txt  fig7_m_grid_holes_rings.txt  fig7_n_square_with_delta_hole_rings.txt  fig7_o_staircase_with_holes_rings.txt
